# LogicGater

./: .gitignore  CMakeLists.txt  controlador.cpp  controlador.h  controles.cpp  controles.h  entrada.cpp  entrada.h  io.cpp  io.h  main.cpp  puerta.cpp  puerta.h  raton.cpp  raton.h  salida.cpp  salida.h
Wrapper/: image.cpp  image.h  sound.cpp  sound.h  text.cpp  text.h  window.cpp  window.h
img/puertas/: plantilla.xcf
